# mandelbrot-rust

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/mandelbrot/: bounded.rs  compute.rs  mod.rs
src/ui/: app.rs  events.rs  mod.rs  render.rs
