[package]
name = "mandelbrot-rust"
version = "0.1.0"
edition = "2018"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
description = "Mandelbrot explorer written in rust"
homepage = "https://github.com/pepijnd/mandelbrot-rust"
repository = "https://github.com/pepijnd/mandelbrot-rust"
license = "MIT"
categories = ["graphics", "mandelbrot", ""]

[dependencies]
palette = "0.4.1"
time = "0.1.42"
threadpool = "1.7.1"
packed_simd = "0.3.3"
rug = "1.5.2"
imgui = "0.1.0"
imgui-glium-renderer = "0.1.0"
imgui-winit-support = "0.1.0"
glium = { version = "0.25.1", default-features = false, features = ["glutin"] }

