[package]
name = "mandelbrot-rust"
version = "0.2.0"
edition = "2018"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
description = "Mandelbrot explorer written in rust"
homepage = "https://github.com/pepijnd/mandelbrot-rust"
repository = "https://github.com/pepijnd/mandelbrot-rust"
license = "MIT"
categories = ["graphics", "mandelbrot"]

[dependencies]
palette = "0.5.0"
time = "0.2.9"
threadpool = "1.7.1"
packed_simd = "0.3.3"
rug = "1.5.2"
imgui = "0.3.0"
imgui-glium-renderer = "0.3.0"
imgui-winit-support = "0.3.0"
glium = { version = "0.26.0", default-features = false, features = ["glutin"] }
num-derive = "0.3.0"
num-traits = "0.2.11"

[patch.crates-io]
glium = { git="https://github.com/glium/glium", rev="fb567dbc40718c8e5cdc9da41b7e4e803439376b" }


